--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <noscript>
       <span>This website is using Elm, so it needs js enabled</span>
     </noscript>
-    <script src="//cdn.jsdelivr.net/npm/pouchdb@7.1.1/dist/pouchdb.min.js"></script>
-    <script src="./pouchdb.js"></script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/pouchdb@7.1.1/dist/pouchdb.min.js"></script>
+    <script src="./pouchdb.js"></script> -->
     <script>
       var app = Elm.Main.init();
 
@@ -23,28 +23,28 @@
         });
       }
 
-      window.addEventListener(
-        'online',
-        function(e) {
-          // sync data with server
-          app.ports.online.send(true);
-        },
-        false
-      );
+      // window.addEventListener(
+      //   'online',
+      //   function(e) {
+      //     // sync data with server
+      //     app.ports.online.send(true);
+      //   },
+      //   false
+      // );
 
-      window.addEventListener(
-        'offline',
-        function(e) {
-          // save data locally
-          app.ports.online.send(false);
-        },
-        false
-      );
+      // window.addEventListener(
+      //   'offline',
+      //   function(e) {
+      //     // save data locally
+      //     app.ports.online.send(false);
+      //   },
+      //   false
+      // );
 
-      app.ports.pouchDB.subscribe(function(capture) {
-        console.log('capture offline', capture);
-        saveCapture(capture);
-      });
+      // app.ports.pouchDB.subscribe(function(capture) {
+      //   console.log('capture offline', capture);
+      //   saveCapture(capture);
+      // });
     </script>
   </body>
 </html>
