--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       var app = Elm.Main.init();
 
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/service_worker.js').then(function() {
-          console.log('Service Worker Registered');
-        });
+        navigator.serviceWorker
+          .register('./service_worker.js')
+          .then(function() {
+            console.log('Service Worker Registered');
+          });
       }
 
       // window.addEventListener(
