--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./elm.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Description" content="Sudoku app using Elm!" />
+    <meta name="theme-color" content="#4BC0A9" />
   </head>
 
   <body>
