--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Description" content="Sudoku app using Elm!" />
     <meta name="theme-color" content="#4BC0A9" />
+    <link rel="apple-touch-icon" href="./Icon-180.png" />
   </head>
 
   <body>
