--- a/index.html
+++ b/index.html
@@ -18,11 +18,23 @@
       var app = Elm.Main.init();
 
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker
-          .register('./service_worker.js')
-          .then(function() {
-            console.log('Service Worker Registered');
-          });
+        if (navigator.serviceWorker.controller) {
+          console.log(
+            '[PWA Builder] active service worker found, no need to register'
+          );
+        } else {
+          // Register the service worker
+          navigator.serviceWorker
+            .register('./service_worker.js', {
+              scope: './'
+            })
+            .then(function(reg) {
+              console.log(
+                '[PWA Builder] Service worker has been registered for scope: ' +
+                  reg.scope
+              );
+            });
+        }
       }
     </script>
   </body>
