--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <title>Sudoku</title>
-    <link rel="manifest" href="./manifest.json" />
-    <script src="./elm.js"></script>
+    <meta charset="utf-8" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="Description" content="Sudoku app using Elm!" />
+    <meta name="Description" content="Sudoku app using Elm!!" />
     <meta name="theme-color" content="#EDF2F7" />
     <link rel="apple-touch-icon" href="./Icon-180.png" />
+    <script defer src="./index.js"></script>
   </head>
 
   <body>
@@ -15,8 +16,6 @@
       <span>This website is using Elm, so it needs js enabled</span>
     </noscript>
     <script>
-      var app = Elm.Main.init();
-
       if ('serviceWorker' in navigator) {
         if (navigator.serviceWorker.controller) {
           console.log(
